--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tailwind-nextjs-starter-blog",
+  "name": "chriscode's article",
   "version": "1.5.1",
   "private": true,
   "scripts": {
